# dimensionality-reduction

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
dimensionality_reduction/: __init__.py  pca_model.py
dimensionality_reduction/preprocessing/: __init__.py  feature_selection.py  scaler.py
dimensionality_reduction/visualization/: __init__.py  pca_analysis.py  pca_plots.py
examples/: README.md  pca_advanced_example.ipynb  pca_advanced_example.py  pca_example.py
tests/: __init__.py  test_pca_model.py
tests/preprocessing/: __init__.py  test_feature_selection.py  test_scaler.py
tests/visualization/: __init__.py  test_pca_analysis.py  test_pca_plots.py
