[project]
name = "dimensionality-reduction"
version = "0.1.0"
description = "Utility functions for dimensionality reduction techniques including preprocessing and visualization"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "GonxaTroll"},
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
