[project]
name = "dimensionality-reduction"
version = "0.1.0"
description = "Utility functions for dimensionality reduction techniques including preprocessing and visualization"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "GonxaTroll"},
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]
